Corrigindo Erros de Escrita na Pagina Inicial & Alterando Modelo de Curriculo

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
                         <p>Olá! Eu sou a Alexandre Silva. Gosto de leitura, video games, programação e redes de internet; amante de ciências físicas e biológicas, história e estudos sociais. Cursando Análise e Desenvolvimento de Sistemas na FMU,
-                          em paralelo, relaizo estudos nas Linguagens: Python, HTML, CSS, PHP, JavaScript, Shell Script; também realizo estudos na área de Redes de Internet. Estou buscando uma oportunidade de inserção ao mercado de trabalho para aplicar 
+                          em paralelo, realizo estudos nas Linguagens: Python, HTML, CSS, PHP, JavaScript, Shell Script; também realizo estudos na área de Redes de Internet. Estou buscando uma oportunidade de inserção ao mercado de trabalho para aplicar 
                           meus conhecimentos e aprimorá-los.
                         </p>
                       </div>
                       <div class="download-resume">
-                        <a href="cv/curriculo_online.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                        <a href="cv/curriculo_online_alexandre.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                       </div>
                     </div>
 
@@ -452,7 +452,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="cv/curriculo_online.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                          <a href="cv/curriculo_online_alexandre.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                         </div>
                       </div>
                     </div>
